CHANGES.txt - 08/25/2005
------------------------

CHANGES IN CUPS V1.2.0b1

	- Fixed a bug in the scheduler's startup signalling code
	  which caused cupsd to send the SIGUSR1 signal to the
	  init process instead of the original parent process
	  (STR #1258)
	- Added new on-line help CGI to web interface to provide
	  searchable help.
	- Devices are now tracked dynamically, with each query
	  doing a new device scan.  This eliminates a previous
	  startup delay caused by slow backends and allows new
	  printers to be seen without restarting the server,
	  however it limits the amount of device URI checking
	  that can be done (basically now the scheduler only
	  requires a URI with a method that is a listed backend)
	- Added new printer auto-detection, server configuration,
	  and log file viewing to the administration web page.
	- Added new "set allowed users" web interface to set the
	  list of allowed users for a printer or class.
	- The scheduler, command-line, and web interfaces now
	  limit the list of printers and classes to those
	  accessible by a user.
	- cupsMarkOptions() now handles more non-standard
	  duplexing options and choices (STR #915)
	- cups-lpd now honors remote banner requests with the
	  "standard" banner whenever a printer does not have one
	  defined (STR #1220)
	- The scheduler's denial-of-service checks did not work
	  properly with IPv6 addresses (STR #1134)
	- The lp and lpr commands did not error out properly when
	  they were unable to write to a temporary file (STR
	  #1129)
	- The pstops filter did not handle Adobe-specific
	  comments in Windows NT driver output (STR #1085)
	- "lpstat -l -p" incorrectly reported the printer
	  interface (STR #936)
	- The web interface now operates exclusively with the
	  UTF-8 encoding, and sends the appropriate character set
	  and header information to the web browser (STR #919,
	  STR #1007)
	- Added a "set allowed users" interface to the web